# Django-Test-App

./: .coverage  Pipfile  README.md  db.sqlite3  pytest.ini  report.html  requirements.txt
budget/: models.py  views.py
budget/migrations/: 0001_initial.py
budget/tests/: test_pytest_views.py  test_urls.py  test_views.py
budgetproject/: pyproject.toml  settings.py
