[tool.poetry]
name = "budgetproject"
version = "0.1.0"
description = "Description de votre projet"
authors = ["saif <votre.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11.1"
django = "~=5.0.4"
pytest = "~=8.2.0"

[tool.poetry.dev-dependencies]
pytest-django = "~=4.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
